--- a/cyclope/media/css/admin_tools_theming.css
+++ b/cyclope/media/css/admin_tools_theming.css
@@ -804,3 +804,25 @@ h1.dashboard-title {float:none !important;width:960px;margin:30px auto 0;float:n
 .login #footer {display:none;}
 ul.messagelist li {width:880px !important;margin:0 auto !important;padding:20px 40px;background-position:20px center;font-size:1.2em;}
 .changelink {background: url("../images/admin-cyclope-sitesettings-small.png") no-repeat !important;}
+
+/*# GFKWidget */
+
+fieldset .inlined{
+  border: none;
+}
+
+.GenericFKAdmin .current-object{
+  padding-right: 20px;
+}
+
+.GenericFKAdmin .search-widget label{
+}
+
+.GenericFKAdmin .create-content-inlined-form{
+  float:left;
+  padding-left: 20px;
+  border-left-style: solid;
+  border-left-width: 1px;
+  border-left-color: #CCCCCC;
+}
+
