--- a/cyclope/templates/cyclope/themes/neutronix/newsletter.html
+++ b/cyclope/templates/cyclope/themes/neutronix/newsletter.html
@@ -33,7 +33,10 @@
       .newsletter_teaser .content {font-weight:700;font-size:16px;}
       .newsletter_teaser p {font-family:Arial,Helvetica,sans-serif;padding:0;margin:0;}
       .newsletter_teaser p img {display:block;margin:10px auto;width:450px;}
-      .newsletter_teaser .newsletter_image {padding:5px 0 10px 15px;float:right;display:block;}
+      .newsletter_teaser .newsletter_image, .newsletter_teaser img.newsletter_image_top, 
+      .newsletter_teaser img.newsletter_image_center, .newsletter_teaser img.newsletter_image_lateral  {padding:5px 0 10px 15px;float:right;display:block;}
+	  .newsletter_teaser img.newsletter_image_top { width: 250px; }
+	  .newsletter_teaser img.newsletter_image_center { width: 150px; }
       .newsletter_teaser hr {border:none;border-top:2px solid #ccc;margin:15px 0;}
       .newsletter_teaser .pretitle {color:#000;font-family:Arial,Helvetica,sans-serif;font-size:12px;padding:5px 0;background:transparent;text-transform:uppercase;}
       .newsletter_teaser .pretitle a {color:#000;text-decoration:none;}
