--- a/cyclope/apps/articles/templates/articles/article_labeled_icon.html
+++ b/cyclope/apps/articles/templates/articles/article_labeled_icon.html
@@ -2,12 +2,9 @@
 
   <div class="content-view article labeled_icon">
     <a href="{% url article-detail article.slug %}">
-	  {% if article.picture %}
+      {% if article.get_picture %}
         <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/article.png" border="0"/>
-        <img class="icon" src="/media/{{ article.picture.image.path }}" border="0"/>
-      {% elif article.pictures %}
-        <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/article.png" border="0"/>
-        <img class="icon" src="{% version article.pictures.0.image.path 'thumbnail' %}" border="0"/>
+        <img class="icon" src="{% version article.get_picture.image.path 'thumbnail' %}" border="0"/>
       {% else %}
         <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/article.png" border="0"/>
         <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
