--- a/cyclope/templates/cyclope/themes/neutronix/newsletter.html
+++ b/cyclope/templates/cyclope/themes/neutronix/newsletter.html
@@ -99,7 +99,7 @@
           <table class="header" align="center" border="0" cellpadding="0" cellspacing="0" width="720">
             <tr>
               <td height="124" valign="middle">
-                <h1 class="title">{{ newsletter.name }}</h1>
+                {% if newsletter.show_title %}<h1 class="title">{{ newsletter.name }}</h1>{% endif %}
                 <span class="summary">{{ newsletter.header|smart_style }}</span>
               </td>
             </tr>
