Comments are now sorted from newest to oldest

--- a/cyclope/templates/comments/comments_block.html
+++ b/cyclope/templates/comments/comments_block.html
@@ -38,6 +38,13 @@
                 $('#form-comment').toggle();
             });
         });
+
+        jQuery(document).ready(function(){
+            // sort comments from newest to oldest
+            var list = $('#user_comments');
+            var listItems = list.children('ul');
+            list.append(listItems.get().reverse());
+        });
     </script>
 
 
