--- a/cyclope/media/markitup/sets/textile/style.css
+++ b/cyclope/media/markitup/sets/textile/style.css
@@ -33,28 +33,55 @@
 .markItUp .markItUpButton10 a {
 	background-image:url(images/stroke.png);
 }
-
 .markItUp .markItUpButton11 a {
-	background-image:url(images/list-bullet.png);
+	background-image:url(images/text_emdash.png);
 }
 .markItUp .markItUpButton12 a {
-	background-image:url(images/list-numeric.png);
+	background-image:url(images/text_underline.png);
 }
 
 .markItUp .markItUpButton13 a {
-	background-image:url(images/picture.png); 
+	background-image:url(images/text_align_left.png);
 }
 .markItUp .markItUpButton14 a {
+	background-image:url(images/text_align_right.png);
+}
+.markItUp .markItUpButton15 a {
+	background-image:url(images/text_align_center.png);
+}
+.markItUp .markItUpButton16 a {
+	background-image:url(images/text_align_justify.png);
+}
+
+.markItUp .markItUpButton17 a {
+	background-image:url(images/list-bullet.png);
+}
+.markItUp .markItUpButton18 a {
+	background-image:url(images/list-numeric.png);
+}
+.markItUp .markItUpButton19 a {
+	background-image:url(images/text_indent.png);
+}
+
+.markItUp .markItUpButton20 a {
+	background-image:url(images/picture.png); 
+}
+.markItUp .markItUpButton21 a {
 	background-image:url(images/link.png);
 }
 
-.markItUp .markItUpButton15 a	{
+.markItUp .markItUpButton22 a	{
 	background-image:url(images/quotes.png);
 }
-.markItUp .markItUpButton16 a	{
+.markItUp .markItUpButton23 a	{
 	background-image:url(images/code.png);
+}
+.markItUp .markItUpButton24 a	{
+	background-image:url(images/link_error.png);
 }
 
 .markItUp .preview a {
 	background-image:url(images/preview.png);
 }
+
+.markItUp { width: 532px !important;}
