first adaptation hierarchical menu to bootstrap

--- a/cyclope/templates/cyclope/menu_menuitems_hierarchy.html
+++ b/cyclope/templates/cyclope/menu_menuitems_hierarchy.html
@@ -2,7 +2,9 @@
 {% load cyclope_utils %}
 
 {% block content %}
-<ul id="menu-{{ expand_style|lower }}-{{ menu_slug }}" class="cyclope_menu {{ expand_style|lower }}">
-    {{ menu_items|unordered_list_css }}
+<div id="navbar" class="collapse navbar-collapse">
+<ul id="menu-{{ expand_style|lower }}-{{ menu_slug }}" class="cyclope_menu {{ expand_style|lower }} nav navbar-nav" >
+	  {{ menu_items|unordered_list_css }}
 </ul>
+</div>
 {% endblock content %}
