--- a/cyclope/core/collections/templates/collections/category_contents_base.html
+++ b/cyclope/core/collections/templates/collections/category_contents_base.html
@@ -4,6 +4,17 @@
 
 {% block content %}
 
+
+{% comment %}
+  {% if view_options.show_title %}
+  <div class="category_title">
+    <h1 class="title">
+      <a href="{% url category-default category.slug %}">{{ category.name }}</a>
+    </h1>
+  </div>
+  {% endif %}
+
+
   {% if not request.hide_frontend_edit %}
     {% per_category_perms category as cat_perms %}
     {% if cat_perms.add_content %}
@@ -21,18 +32,20 @@
     </div>
     {% endif %}
   {% endif %}
+{% endcomment %}
+
 
   {% if view_options.navigation == "TOP" %}
-    {% include 'collections/hierarchycal_navigation_block.html' %}
+    {% include 'cyclope/breadcrumb_block.html' %}
   {% endif %}
 
-  {% if view_options.show_title %}
-  <div class="category_title">
-    <h1 class="title">
+
+	 {% if view_options.show_title and  region_name %}
+  <span class="category_title">
       <a href="{% url category-default category.slug %}">{{ category.name }}</a>
-    </h1>
-  </div>
+     </span>
   {% endif %}
+
 
   {% if category.description and view_options.show_description or category.image and view_options.show_image %}
   <div class="collection_teaser">
@@ -48,7 +61,7 @@
   {% block category_content %}{% endblock %}
   {% spaceless %}
   {% if view_options.navigation == "BOTTOM" %}
-    {% include 'collections/hierarchycal_navigation_block.html' %}
+    {% include 'cyclope/breadcrumb_block.html' %}
   {% endif %}
 
   {% if page %}
@@ -59,4 +72,5 @@
     {% endif %}
   {% endif %}
   {% endspaceless %}
+
 {% endblock %}
