--- a/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
+++ b/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
@@ -1,21 +1,19 @@
 {% if category.collection.visible %}
   {% with children=category.children.all %}
-  {% if not region_name %}
-  <div id="categories_navigation" class="{{ category.collection.slug }} {{ category.slug }}{% if children %} children{% endif %}">
+  <!-- <ol id="categories_navigation" class=" {{ category.collection.slug }} {{ category.slug }}{% if children %} children{% endif %}" style="background:#333;"> -->
     {% if category.parent %}
-      <a href="{% url category-default category.parent.slug %}" class="parent">{{ category.parent.name }}</a>
+      <li><a href="{% url category-default category.parent.slug %}" class="parent">{{ category.parent.name }}</a></li>
     {% else %}
-      <a href="{% url collection-root_categories_teaser_list category.collection.slug %}" class="parent">{{ category.collection.name }}</a>
+      <li><a href="{% url collection-root_categories_teaser_list category.collection.slug %}" class="parent">{{ category.collection.name }}</a></li>
     {% endif %}
 
     {% if children %}
-      <ul>
+      <ol>
         {% for child in children %}
           <li> <a href="{% url category-default child.slug %}" class="children">{{ child.name }}</a> </li>
         {% endfor %}
-      </ul>
+      </ol>
     {% endif %}
-  </div>
-  {% endif%}
+  <!-- </ol> -->
   {% endwith %}
 {% endif %}
