--- a/cyclope/templates/cyclope/teaser_tools_block.html
+++ b/cyclope/templates/cyclope/teaser_tools_block.html
@@ -7,5 +7,8 @@
   <a href="/admin/{{ current_object.get_app_label }}/{{ current_object.get_object_name }}/{{current_object.pk }}?_frontend=1&_popup=1" class="edit_link">
     {% trans "Edit" %}
   </a>
+  <a href="/{{ current_object.get_app_label }}/{{ current_object.get_object_name }}/{{ current_object.slug }}/delete/" class="delete_link">
+    {% trans "Delete" %}
+  </a>
 </div>
 {% endif %}
