--- a/cyclope/templates/cyclope/content_tools_block.html
+++ b/cyclope/templates/cyclope/content_tools_block.html
@@ -34,7 +34,7 @@
         </a>
       </li>
       <li>
-        <a href="/{{ current_object.get_app_label }}/{{ current_object.get_object_name }}/{{ current_object.slug }}/delete/" class="delete_link">
+        <a href="/{{ current_object.get_object_name }}/{{ current_object.slug }}/delete/" class="delete_link">
           {% trans "Delete" %}
         </a>
       </li>
