--- a/cyclope/media/themes/cyclope-bootstrap/css/css.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/css.less
@@ -17,9 +17,47 @@ footer {
  * --------------------------------------------------
  */
 #block_content {overflow:auto;}
-
-.type_icon img {position: absolute;top:52px;right:85px;}
+.jumbotron .title {font-size: 63px;} /*fixed size title in jumbotron - forced h2*/
+img.type_icon {float:right;}
 #bottom .content-view {width:33.33333%;float:left;}
+
+#right .navbar-nav {width: 100% !important;margin:0 0 10px;padding:0;}
+#right .navbar-nav ul {width: 100% !important;}
+#right .navbar-collapse {padding:0 !important;}
+#right .navbar-nav li {
+  float: none !important;
+  background-color: #fff;
+  padding:0 !important;
+  position: relative;
+  display: block;
+  margin-bottom: -1px;
+  border: 1px solid #ddd;
+}
+#right .navbar-nav li:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+#right .navbar-nav li:last-child {
+  margin-bottom: 0;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+#right .navbar-nav li a {
+  color: #555;
+}
+#right .navbar-nav li a.navbar-nav li-heading {
+  color: #333;
+}
+#right .navbar-nav li a:hover,
+#right .navbar-nav li a:focus {
+  color: #555;
+  text-decoration: none;
+  background-color: #f5f5f5;
+}
+
+#right .search-box {padding:3px 0;background:#eee;margin:0;border-radius:4px;}
+#right .search-box .form-control {color:#959595;}
+
 /*
  * Off Canvas
  * --------------------------------------------------
